--- a/package.json
+++ b/package.json
@@ -1,37 +1,24 @@
 {
   "name": "travel-site",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "scripts": {
+    "dev": "webpack serve",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "lodash": "^4.17.20",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "css-loader": "^5.1.1",
+    "autoprefixer": "^10.2.4",
+    "css-loader": "^5.0.1",
     "postcss-import": "^14.0.0",
-    "postcss-loader": "^5.1.0",
-    "postcss-mixins": "^7.0.3",
-    "postcss-nested": "^5.0.5",
-    "postcss-simple-vars": "^6.0.3",
+    "postcss-loader": "^5.0.0",
+    "postcss-mixins": "^7.0.2",
+    "postcss-nested": "^5.0.3",
+    "postcss-simple-vars": "^6.0.2",
     "style-loader": "^2.0.0",
-    "webpack": "^5.24.3",
+    "webpack": "^5.20.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
-  },
-  "scripts": {
-    "dev": "webpack serve"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/darioMiskovic/travel-site.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/darioMiskovic/travel-site/issues"
-  },
-  "homepage": "https://github.com/darioMiskovic/travel-site#readme"
+  }
 }
